# dataformats

./: .gitignore  README.MD
data/: grande  iact  t133  trex
descriptions/hiscore/: hiscore.ksy
descriptions/hiscore/HiscoreReader/: pom.xml
descriptions/iact/: iact.ksy
descriptions/t133/: t133.ksy
examples/Cpp/HiscoreReader/: hiscore.h  main.cpp
examples/HiscoreCppReader/kaitai/: kaitaistream.cpp
examples/Java/TRexReader/: pom.xml
examples/Python/GrandeT133DirectoryProcessing/: grande.py
examples/Python/GrandeTRexDirectoryProcessing/: trex_reader.py
examples/Python/IactSerializationDeserialization/: iact.py  iact_gen
examples/TRexT133PythonParseFolder/: trex.py  trex_reader.py
examples/python/grande_t133_directory_processing/: main.py  t133.py
examples/python/iact_serialzation_deserialization/: main.py
formats/: grande.ksy  hiscore.ksy  iact.ksy  t133.ksy  t133_link.ksy  trex.ksy
readers/HiscoreCppReader/: CMakeLists.txt  main.cpp
readers/HiscoreJavaExample/: pom.xml
readers/HiscoreReader/: pom.xml
src/grande/construct/: grande.py
src/grande/cpp_stl/: grande.cpp  grande.h
src/grande/csharp/: Grande.cs
src/grande/graphviz/: grande.dot
src/grande/javascript/: Grande.js
src/grande/lua/: grande.lua
src/grande/perl/: Grande.pm
src/grande/php/: Grande.php
src/grande/ruby/: grande.rb
src/hiscore/cpp_stl/: hiscore.cpp
src/hiscore/lua/: hiscore.lua
src/hiscore/perl/: Hiscore.pm
src/hiscore/python/: hiscore.py
src/hiscore/ruby/: hiscore.rb
src/iact/cpp_stl/: iact.cpp  iact.h
src/iact/csharp/: Iact.cs
(+66 files in other folders)
